# moonhub-takehome

./: .gitignore  package-lock.json  package.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
api/: .env  .gitignore  README.md  main.py  openapi.json  pyproject.toml  requirements.txt
api/scripts/: import-us-persons.py  lint.sh  static-analysis.sh
api/src/: entry.py
api/src/common/: broker.py  config.py  healthcheck.py  logging.py  nylas.py
api/src/common/middleware/: logging.py
api/src/models/: nylas.py
api/src/routes/: routes.py
api/src/routes/v1/: v1.py
api/src/routes/v1/nylas/: main.py
api/src/routes/v1/sample/: main.py
api/tests/: test_application.py
prisma/: schema.prisma
prisma/migrations/20240314004747_init/: migration.sql
prisma/migrations/20240314152456_init/: migration.sql
prisma/migrations/20240314195420_nylas/: migration.sql
prisma/migrations/20240314201846_email_date_update/: migration.sql
prisma/migrations/20240314201949_id_change/: migration.sql
prisma/migrations/20240314204645_fun/: migration.sql
web/: fly.toml  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
web/.github/workflows/: deploy.yml
web/app/: root.tsx  trigger.server.ts
web/app/components/: logo.tsx
web/app/routes/_auth+/: auth.$provider.callback.ts  forgot-password.tsx  login.server.ts  login.tsx  onboarding.tsx  onboarding_.$provider.tsx  reset-password.tsx  signup.tsx
web/app/routes/_marketing+/: _layout.tsx  index.tsx
web/app/routes/app+/: _layout.tsx  index.tsx
web/app/routes/app+/projects+/: index.tsx  sequence.tsx
web/app/routes/resources+/: download-user-data.tsx  user-images.$imageId.tsx
web/app/routes/settings+/: profile.change-email.server.tsx  profile.change-email.tsx  profile.index.tsx  profile.photo.tsx
web/app/routes/users+/: $username.tsx  index.tsx
web/app/styles/: tailwind.css
web/app/utils/: api-type.server.ts  api.server.ts  auth.server.ts  misc.tsx
web/prisma/: seed.ts
web/public/: site.webmanifest
web/tests/: db-utils.ts  playwright-utils.ts
(+2 files in other folders)
